--- a/app/css/style.scss
+++ b/app/css/style.scss
@@ -15,6 +15,7 @@ html {
 
 body {
   width: 100%;
+  overflow-x: hidden;
 
   background-color: $white-dark;
 
